<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNameFolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterFolderName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/buttonCancelEditFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_buttons"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/buttonSaveEditFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_buttons"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </LinearLayout>
</LinearLayout>
